--- a/src/assets/stylesheets/nav.scss
+++ b/src/assets/stylesheets/nav.scss
@@ -32,7 +32,7 @@
     font-family: "Muli-Light";
     text-decoration: none;
     color: black;
-    font-size: 1.5em;
+    font-size: 16px;
   }
   .Links {
     transition: all 0.8s ease-out;
@@ -42,45 +42,57 @@
     align-items: center;
     list-style: none;
     // border: 4px solid yellow;
-
   }
-  .contacts a{
-
+  .contacts a {
     font-family: "Muli-Light";
-    font-size:1.5em !important;
+    font-size: 1.5em !important;
   }
 
-
-     // SURFACE DUO
-  @media(min-width:540px){
-    
+  // SURFACE DUO
+  @media (min-width: 540px) {
   }
   // IPAD
-  @media(min-width:768px){
+  @media (min-width: 768px) {
     .burgerMenu {
-      display:none;
+      display: none;
     }
-    li{
-      display: flex!important;
-      color:black;
-      display: flex!important;
-      color:black !important;
+    li {
+      display: flex !important;
+      color: black;
+      display: flex !important;
+      color: black !important;
       z-index: 8;
     }
     .desktop {
-      display: flex!important;
-      color:black !important;
+      display: flex !important;
+      color: black !important;
       z-index: 8;
     }
-  } 
-  /////////////// VERSIONS DESKTOP \\\\\\\\\\\\\\\   
-  @media(min-width:1024px){
+  }
+  /////////////// VERSIONS DESKTOP \\\\\\\\\\\\\\\
+  @media (min-width: 1024px) {
     // .a1,.a3{
     //   left: 60.9%!important;
     // }
 
+    .Links ul {
+      color: rgb(250, 241, 241) !important;
+    
+      // right: 100% !important;
+      top: 3% !important;
+      display: flex!important;
+      justify-content:flex-end !important;
+      align-items: flex-end!important;
+        li{
+          display: flex!important;
+          a {
+            display: flex!important;
+            font-family: "Muli-Light";
+            font-size: 16px !important;
+            color: black !important;
+          }
+        }
+
+    }
   }
-
-  
-
 }
