--- a/src/assets/stylesheets/actuality.scss
+++ b/src/assets/stylesheets/actuality.scss
@@ -348,7 +348,8 @@
     }  
   }
   /////////////// VERSIONS DESKTOP \\\\\\\\\\\\\\\   
-  @media(min-width:1024px){
+  @media only screen and (min-device-width: 1024px) {
+  // @media(min-width:1024px){
     div{
       // border:3px solid red;
       display:flex;
