--- a/src/assets/stylesheets/footer.scss
+++ b/src/assets/stylesheets/footer.scss
@@ -64,7 +64,7 @@ footer {
     }
 
  /////////////// VERSIONS DESKTOP \\\\\\\\\\\\\\\   
-    //  @media(min-width:1024px){
+//  @media only screen and (min-device-width: 1024px) {
     //   div:nth-child(1) p > *{
     //   display:fle
     //  }
