--- a/src/assets/stylesheets/testimony.scss
+++ b/src/assets/stylesheets/testimony.scss
@@ -127,7 +127,7 @@
       }
     }  
  /////////////// VERSIONS DESKTOP \\\\\\\\\\\\\\\   
- @media(min-width:1024px){
+ @media only screen and (min-device-width: 1024px) {
    
    margin: 4% 6%!important;
       span{
