--- a/src/assets/stylesheets/header.scss
+++ b/src/assets/stylesheets/header.scss
@@ -41,7 +41,12 @@ header {
   // border: 10px solid green;
   overflow: hidden;
   margin: 0 !important;
-
+.logo{
+  display: none;
+}
+.facebookLink{
+  display: none;
+}
   .imgHeader {
     margin: 0 !important;
     opacity: rgba(0, 0, 0, 0.7);
@@ -72,6 +77,7 @@ header {
     z-index: 4;
     border: solid 0px rgba(0, 0, 0, 0.5);
     background: rgba(0, 0, 0, 0.5);
+    color:white;;
 
     p:nth-child(2) {
       text-align: left;
@@ -98,27 +104,41 @@ header {
       }
     }
   }
-  @media (width: 280px) {
+   // // PIXEL 2XL
+  @media (width: 280px), (min-width: 411px) {
     p {
       font-size: 15px !important;
     }
-  }
-  // PIXEL 2XL
-  @media (min-width: 411px) {
-    em.titleTagline {
-      font-size: 24px !important;
+    .tagline {
+      display: flex !important;
+      color: white !important;
+      flex-direction: column !important;
+      font-family: "Muli-ExtraLight" !important;
+      text-align: left;
+      font-size: 16px !important;
+      padding-left: 6% !important;
+      
+      .titleTagline {
+        font-size: 22px !important;
+        color: #d99827!important;
+        font-family: "Muli-Bold" !important;
+      }
     }
-    p {
-      font-size: 22px !important;
+    .taglineDesktop{
+      display:none !important;
+      .titleTagline{
+        display: none!important;
+      }
     }
+
   }
   // IPAD
   @media (min-width: 768px) {
     article {
-      p:nth-child(1) {
+      .titleTagline{
         font-size: 24px !important;
       }
-      p:nth-child(2) {
+      .tagline {
         display: flex !important;
         color: white !important;
         flex-direction: column !important;
@@ -143,38 +163,39 @@ header {
   }
   /////////////// VERSIONS DESKTOP \\\\\\\\\\\\\\\
   // IPAD PRO 1024PX
-  @media (min-width: 1024px) {
+  @media only screen and (min-device-width: 1024px) {
     display: flex !important;
     flex-direction: column !important;
     // position:static;
-    height: 100vh !important;
-
+    // height: 100vh !important;
+    
     article {
+      padding-top:10%!important;
       background: none !important;
       border: 3px solid red !important;
-      font-size: 20px !important;
+     
       width: 41vw;
-      height: 98vh;
+      height: 100vh;
       top: 0;
       right: 58%;
-      font-size: 29px !important;
+      font-size: 16px !important;
       display: flex !important;
       flex-direction: column !important;
       /////// LOGO + SLOGAN
       .logo {
         display: flex !important;
-        justify-content: center;
+     
+        justify-content: space-around;
         align-items: center;
         flex-direction: column;
-        height: 80vh;
+        
         img {
-          width: 50%;
+          max-width: 50%!important;
         }
         p {
           color: rgb(43, 93, 153) !important;
           font-family: "Roboto-Light" !important;
           text-shadow: #a2c2df -1px -1px !important;
-          // border: 2px solid rgb(216, 203, 22);
           z-index: 4;
           font-size: 15px !important;
           text-align: center;
@@ -188,21 +209,15 @@ header {
         // margin-top: 76%;
         margin-bottom: 2%;
         text-align: left !important;
-        font-size: 43px !important;
+        font-size: 25px !important;
         padding: 4%;
 
         .titleTaglineDesktop {
-          text-align: center !important;
-          display: block !important;
-          // font-size: 60px !important;
-          color: #d99827;
-          text-align: left !important;
-          font-family: "Roboto-Bold";
-          margin-bottom: 10%;
+          display: none;
         }
       }
       .enSavoirPlus {
-        font-size: 38px !important;
+        font-size: 24px !important;
         margin-top: 10% !important;
         border: 1px solid black !important;
         transform: translateX(4%);
@@ -243,7 +258,7 @@ header {
         display: flex !important;
         justify-content: left;
         transform: scaleX(-1);
-        margin: 90% 0% 0% 11% !important;
+        margin: 5% 0% 0% 11% !important;
         // position:absolute;
       }
       .imgHeader {
