--- a/src/assets/stylesheets/nav.scss
+++ b/src/assets/stylesheets/nav.scss
@@ -70,7 +70,7 @@
     }
   }
   /////////////// VERSIONS DESKTOP \\\\\\\\\\\\\\\
-  @media (min-width: 1024px) {
+  @media only screen and (min-device-width: 1024px) {
     // .a1,.a3{
     //   left: 60.9%!important;
     // }
