--- a/src/assets/stylesheets/header.scss
+++ b/src/assets/stylesheets/header.scss
@@ -41,6 +41,7 @@ header {
   // border: 10px solid green;
   overflow: hidden;
   margin: 0 !important;
+  // 
 .logo{
   display: none;
 }
@@ -105,10 +106,11 @@ header {
     }
   }
    // // PIXEL 2XL
-  @media (width: 280px), (min-width: 411px) {
+  @media (min-width: 280px), (min-width: 411px) {
     p {
       font-size: 15px !important;
     }
+  
     .tagline {
       display: flex !important;
       color: white !important;
@@ -205,23 +207,30 @@ header {
       }
       ////// TAGLINE + TITLE DESKTOP
       .taglineDesktop {
+        display:block !important; 
         font-family: "Roboto-Light";
         // margin-top: 76%;
         margin-bottom: 2%;
         text-align: left !important;
         font-size: 25px !important;
         padding: 4%;
-
-        .titleTaglineDesktop {
-          display: none;
-        }
+        color:black!important;
+      }
+      .taglineDesktop 
+      .titleTaglineDesktop {
+          display: none!important;
+      }
+      
+      .titleTagline {
+        display: none!important;
       }
       .enSavoirPlus {
         font-size: 24px !important;
         margin-top: 10% !important;
         border: 1px solid black !important;
         transform: translateX(4%);
-        margin: 0% 8%;
+        // margin: 0% 8%;
+        margin: 0% 23%;
         transition: all 0.3s;
         border-radius: 5px;
       }
