--- a/src/assets/stylesheets/footer.css
+++ b/src/assets/stylesheets/footer.css
@@ -1,7 +1,5 @@
-<<<<<<< HEAD
-=======
 .homepage {
-  font-size: 62.5%;
+  font-size: 62.5% !important;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -28,7 +26,6 @@
           align-items: center;
 }
 
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
 @font-face {
   font-family: "Muli-Bold";
   src: local("MuliBold"), url(../../assets/fonts/muli/Muli-Bold.ttf) format("truetype");
@@ -40,14 +37,10 @@
 }
 
 footer {
-  font-size: 62.5%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   text-align: left;
-<<<<<<< HEAD
-  margin: 4% 12%;
-=======
   margin: 4% 6%;
   font-family: "Muli-ExtraLight" !important;
 }
@@ -60,22 +53,11 @@ footer * {
   list-style: none;
 }
 
-footer p {
-  font-size: 1.6em;
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
-}
-
 footer div:nth-child(1) {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-<<<<<<< HEAD
-  max-width: 100%;
-  border-bottom: 1px solid black;
-  width: 70vw;
-=======
   width: 100%;
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
   padding-bottom: 4%;
 }
 
@@ -85,12 +67,6 @@ footer div:nth-child(1) p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-<<<<<<< HEAD
-  text-align: left;
-  font-family: "Muli-ExtraLight";
-  padding-right: 3%;
-=======
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
 }
 
 footer div:nth-child(1) img {
@@ -104,17 +80,9 @@ footer div:nth-child(2) {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-<<<<<<< HEAD
-  width: 40vw;
-}
-
-footer .copyrightNav p {
-  font-family: "Muli-ExtraLight";
-=======
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   overflow: hidden;
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
 }
 
 footer div:nth-child(2) .copyright {
@@ -135,7 +103,6 @@ footer div:nth-child(2) .Nav {
 
 footer div:nth-child(2) .Nav li:nth-child(n) {
   padding-bottom: 5%;
-  font-size: 1.6em;
 }
 
 footer div:nth-child(2) .Nav a {
@@ -145,11 +112,5 @@ footer div:nth-child(2) .Nav a {
 
 footer div:nth-child(2) .contactFooter {
   border: 3px solid blue;
-}
-
-@media (min-width: 1024px) {
-  footer div:nth-child(2) p {
-    font-size: 2em;
-  }
 }
 /*# sourceMappingURL=footer.css.map */
