--- a/src/assets/stylesheets/actuality.css
+++ b/src/assets/stylesheets/actuality.css
@@ -14,8 +14,6 @@
 }
 
 @font-face {
-<<<<<<< HEAD
-=======
   font-family: "Roboto-Bold";
   src: local("RobotoBold"), url(../../assets/fonts/Roboto/Roboto-Bold.ttf) format("truetype");
 }
@@ -26,19 +24,15 @@
 }
 
 @font-face {
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
   font-family: "Quicksand-Light";
   src: local("QuicksandLight"), url(../../assets/fonts/Quicksand/Quicksand-Light.ttf) format("truetype");
 }
 
-<<<<<<< HEAD
-=======
 @font-face {
   font-family: "Peace Sans";
   src: local("PeaceSans"), url(../../assets/fonts/peace_sans/PeaceSansWebfont.ttf) format("truetype");
 }
 
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
 .actuality {
   margin: 4%;
   display: -webkit-box;
@@ -71,13 +65,8 @@
 
 .actuality section h2 {
   font-weight: 300;
-<<<<<<< HEAD
-  font-family: "Quicksand-Regular";
-  color: #004AAD;
-=======
   font-family: "Roboto-Light";
   color: black;
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
   padding-bottom: 10%;
 }
 
@@ -110,51 +99,12 @@
   text-align: center;
   position: relative;
   z-index: 2;
-<<<<<<< HEAD
-  max-width: 80%;
-  max-height: 60%;
-=======
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
   top: 10%;
   border-radius: 4px;
   padding: 5px;
 }
 
-.actuality figure .a2 {
-  top: 70%;
-  color: red;
-}
-
-.actuality figure .a3 {
-  top: 38%;
-  color: blue;
-}
-
 .actuality figure a {
-<<<<<<< HEAD
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  width: 20%;
-  height: 1%;
-  z-index: 4;
-  left: 70%;
-  top: 6%;
-  position: absolute;
-  background-color: #D99827;
-  opacity: 70%;
-  text-decoration: none;
-  color: white;
-  font-size: 1.2rem;
-  cursor: pointer;
-=======
   font-family: "Roboto-Bold";
   font-size: 22.1px;
 }
@@ -193,7 +143,6 @@
   padding: 2%;
   -webkit-box-shadow: 10px 5px #00000000;
           box-shadow: 10px 5px #00000000;
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
 }
 
 .actuality figure .a1 {
@@ -231,36 +180,20 @@
           align-items: center;
   z-index: 6;
   color: white;
-<<<<<<< HEAD
-  border: 4px solid green;
-  left: 20%;
-  top: 22%;
-  width: 60%;
-  height: 2%;
-=======
   left: 10%;
   top: 27%;
   max-width: 90%;
   font-size: 16px !important;
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
   font-family: "Muli";
   text-align: center;
 }
 
 .actuality figure .figcaption2 {
-<<<<<<< HEAD
-  top: 56%;
-}
-
-.actuality figure .figcaption3 {
-  top: 88%;
-=======
   top: 58%;
 }
 
 .actuality figure .figcaption3 {
   top: 89.5%;
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
 }
 
 .actuality h3,
@@ -275,12 +208,6 @@
 .actuality h3 {
   color: black;
   font-weight: 600;
-<<<<<<< HEAD
-  font-size: 1rem;
-  font-family: "Quicksand-Regular";
-}
-
-=======
   font-size: 18px !important;
   color: #356178;
   font-family: "Muli-ExtraLight";
@@ -298,7 +225,6 @@
   font-family: "Muli-ExtraLight";
 }
 
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
 .actuality .button2 {
   background: none;
   color: inherit;
@@ -307,54 +233,28 @@
   cursor: pointer;
   outline: inherit;
   color: #356178;
-<<<<<<< HEAD
-  font-size: 0.8rem;
-  font-family: "Muli-ExtraLight";
-  text-align: center;
-  border: 10px solid blueviolet;
-  position: relative;
-  width: 20%;
-  height: 2%;
-  left: 40%;
-=======
   font-size: 16px !important;
   font-family: "Muli-ExtraLight";
   text-align: center;
   position: relative;
   height: 2%;
   left: 30%;
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
 }
 
 .actuality .button3 {
   background: none;
   color: inherit;
   border: none;
-<<<<<<< HEAD
-  font: inherit;
-  cursor: pointer;
-  outline: inherit;
-  color: #356178;
-  font-size: 0.8rem;
-=======
   cursor: pointer;
   outline: inherit;
   color: #356178;
   font-size: 16px !important;
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
   font-family: "Muli-ExtraLight";
   -webkit-box-align: left;
       -ms-flex-align: left;
           align-items: left;
-<<<<<<< HEAD
-  border: 10px solid #462be2;
-  left: 40%;
-  position: relative;
-  width: 20%;
-=======
   left: 30%;
   position: relative;
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
   height: 2%;
 }
 
@@ -362,38 +262,14 @@
   background: none;
   color: inherit;
   border: none;
-<<<<<<< HEAD
-  font: inherit;
-  cursor: pointer;
-  outline: inherit;
-  color: #356178;
-  font-size: 0.8rem;
-=======
   cursor: pointer;
   outline: inherit;
   color: #356178;
   font-size: 16px !important;
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
   font-family: "Muli-ExtraLight";
   -webkit-box-align: left;
       -ms-flex-align: left;
           align-items: left;
-<<<<<<< HEAD
-  border: 10px solid #b1e22b;
-  left: 40%;
-  position: relative;
-  width: 20%;
-  height: 2%;
-}
-
-.actuality article > p {
-  font-family: "Muli-ExtraLight";
-}
-
-.actuality p {
-  font-weight: 600;
-  font-family: "Muli-ExtraLight";
-=======
   left: 30%;
   position: relative;
   height: 2%;
@@ -477,7 +353,7 @@
   }
 }
 
-@media (min-width: 1024px) {
+@media only screen and (min-device-width: 1024px) {
   .actuality div {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -552,6 +428,5 @@
   .actuality article .figcaption3 {
     left: 66.3% !important;
   }
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
 }
 /*# sourceMappingURL=actuality.css.map */
