--- a/src/assets/stylesheets/header.css
+++ b/src/assets/stylesheets/header.css
@@ -13,6 +13,21 @@
   src: local("MuliBold"), url(../../assets/fonts/muli/Muli-Bold.ttf) format("truetype");
 }
 
+@font-face {
+  font-family: "Roboto-Bold";
+  src: local("RobotoBold"), url(../../assets/fonts/Roboto/Roboto-Bold.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Roboto-Light";
+  src: local("RobotoLight"), url(../../assets/fonts/Roboto/Roboto-Light.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Quicksand-Light";
+  src: local("QuicksandLight"), url(../../assets/fonts/Quicksand/Quicksand-Light.ttf) format("truetype");
+}
+
 header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -36,6 +51,14 @@ header {
   margin: 0 !important;
 }
 
+header .logo {
+  display: none;
+}
+
+header .facebookLink {
+  display: none;
+}
+
 header .imgHeader {
   margin: 0 !important;
   opacity: rgba(0, 0, 0, 0.7);
@@ -52,83 +75,34 @@ header article {
   position: absolute;
   top: 48%;
   right: 20%;
-<<<<<<< HEAD
-  width: 69%;
-  height: 40%;
-=======
   width: 80%;
   height: 45%;
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
   border-radius: 10px;
   z-index: 4;
   border: solid 0px rgba(0, 0, 0, 0.5);
   background: rgba(0, 0, 0, 0.5);
+  color: white;
 }
 
 header article p:nth-child(2) {
-  display: none;
+  text-align: left;
 }
 
 header article .tagline {
-<<<<<<< HEAD
-=======
   padding: 6%;
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
-  color: white;
-  border-radius: 10px;
-  font-weight: bold;
-  font-family: "Muli-ExtraLight";
-  font-weight: 100;
-  text-align: left;
-<<<<<<< HEAD
-  font-size: 0.8rem;
-  padding: 25px;
-=======
-  font-size: 15px;
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
-}
-
-header article .tagline .logo {
-  font-style: normal;
-  color: white;
-  font-weight: 1;
-<<<<<<< HEAD
-  padding-bottom: 4px;
-  font-family: "Muli-Bold";
-  font-size: 1rem;
-=======
-  font-family: "Muli-Bold";
-  font-size: 20px;
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
+  display: none;
 }
 
 header article a {
   background-color: rgba(255, 255, 255, 0.76);
-<<<<<<< HEAD
-  text-align: center;
-=======
   -webkit-box-align: left;
       -ms-flex-align: left;
           align-items: left;
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
   font-family: "Muli-ExtraLight";
   text-decoration: none;
 }
 
 header article .enSavoirPlus {
-<<<<<<< HEAD
-  color: #fff38a;
-  font-family: "Muli";
-  font-size: 0.9rem;
-  background-color: transparent;
-  font-size: 0.7rem;
-  padding-left: 0px;
-}
-
-header article .enSavoirPlus em {
-  color: #fff38a;
-  font-size: 0.9rem;
-=======
   color: #d99827;
   font-family: "Muli";
   font-size: 18px;
@@ -136,30 +110,47 @@ header article .enSavoirPlus em {
 }
 
 header article .enSavoirPlus em {
+  font-family: "Muli-Bold";
   color: #d99827;
   font-size: 16px;
 }
 
-@media (width: 280px) {
+@media (min-width: 280px), (min-width: 411px) {
   header p {
     font-size: 15px !important;
   }
-}
-
-@media (min-width: 411px) {
-  header em.logo {
-    font-size: 24px !important;
+  header .tagline {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    color: white !important;
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
+    font-family: "Muli-ExtraLight" !important;
+    text-align: left;
+    font-size: 16px !important;
+    padding-left: 6% !important;
   }
-  header p {
+  header .tagline .titleTagline {
     font-size: 22px !important;
+    color: #d99827 !important;
+    font-family: "Muli-Bold" !important;
+  }
+  header .taglineDesktop {
+    display: none !important;
+  }
+  header .taglineDesktop .titleTagline {
+    display: none !important;
   }
 }
 
 @media (min-width: 768px) {
-  header article p:nth-child(1) {
+  header article .titleTagline {
     font-size: 24px !important;
   }
-  header article p:nth-child(2) {
+  header article .tagline {
     display: -webkit-box !important;
     display: -ms-flexbox !important;
     display: flex !important;
@@ -173,7 +164,7 @@ header article .enSavoirPlus em {
     font-size: 24px !important;
     padding-left: 6% !important;
   }
-  header article .logo {
+  header article .titleTagline {
     font-size: 37px !important;
     font-family: "Muli-Bold" !important;
   }
@@ -187,21 +178,137 @@ header article .enSavoirPlus em {
   }
 }
 
-@media (min-width: 1024px) {
-  header article p:nth-child(n) {
-    font-size: 35px !important;
+@media only screen and (min-device-width: 1024px) {
+  header {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
+  }
+  header article {
+    padding-top: 10% !important;
+    background: none !important;
+    border: 3px solid red !important;
+    width: 41vw;
+    height: 100vh;
+    top: 0;
+    right: 58%;
+    font-size: 16px !important;
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
   }
   header article .logo {
-    font-size: 45px !important;
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  header article .logo img {
+    max-width: 50% !important;
+  }
+  header article .logo p {
+    color: #2b5d99 !important;
+    font-family: "Roboto-Light" !important;
+    text-shadow: #a2c2df -1px -1px !important;
+    z-index: 4;
+    font-size: 15px !important;
+    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 1%;
+  }
+  header article .taglineDesktop {
+    display: block !important;
+    font-family: "Roboto-Light";
+    margin-bottom: 2%;
+    text-align: left !important;
+    font-size: 25px !important;
+    padding: 4%;
+    color: black !important;
+  }
+  header article .taglineDesktop
+.titleTaglineDesktop {
+    display: none !important;
+  }
+  header article .titleTagline {
+    display: none !important;
   }
   header article .enSavoirPlus {
-    font-size: 33px !important;
-    padding-top: 3% !important;
+    font-size: 24px !important;
+    margin-top: 10% !important;
+    border: 1px solid black !important;
+    -webkit-transform: translateX(4%);
+            transform: translateX(4%);
+    margin: 0% 23%;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    border-radius: 5px;
   }
-  header article .enSavoirPlus em {
-    color: #d99827;
-    font-size: 25px !important;
+  header section {
+    -webkit-transform: scaleX(-1);
+            transform: scaleX(-1);
+    opacity: rgba(0, 0, 0, 0.7);
+    -webkit-filter: saturate(5%) contrast(125%);
+            filter: saturate(5%) contrast(125%);
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    background-size: cover;
+    background-image: url("../images/Header-tablette-pro.jpg") !important;
+    border: 5px solid red !important;
+    background-repeat: no-repeat;
+    -webkit-box-pack: end !important;
+        -ms-flex-pack: end !important;
+            justify-content: flex-end !important;
+    -webkit-box-align: end !important;
+        -ms-flex-align: end !important;
+            align-items: flex-end !important;
+    width: 63vw;
+    height: 100vh;
+    margin: 0;
+    position: relative;
+    left: 24%;
+    box-sizing: border-box;
   }
->>>>>>> b10f0412be9bd7647a017f7a9065cc7d9a4b24e1
+  header section .facebookLink {
+    font-family: "Roboto-Bold" !important;
+    -webkit-writing-mode: vertical-rl !important;
+        -ms-writing-mode: tb-rl !important;
+            writing-mode: vertical-rl !important;
+    color: white !important;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    z-index: 2;
+    text-transform: capitalize !important;
+    font-size: 29px !important;
+    text-decoration: none !important;
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-transform: scaleX(-1);
+            transform: scaleX(-1);
+    margin: 5% 0% 0% 11% !important;
+  }
+  header section .imgHeader {
+    display: none;
+  }
 }
 /*# sourceMappingURL=header.css.map */
