--- a/src/assets/stylesheets/testimony.css
+++ b/src/assets/stylesheets/testimony.css
@@ -131,7 +131,21 @@
   color: #a2c2df;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 540px) {
+  .testimony h1,
+  .testimony h2 {
+    font-size: 25px !important;
+  }
+  .testimony h3,
+  .testimony h4 {
+    font-size: 22px !important;
+  }
+  .testimony p {
+    font-size: 17px !important;
+  }
+}
+
+@media only screen and (min-device-width: 1024px) {
   .testimony {
     margin: 4% 6% !important;
   }
