--- a/src/assets/stylesheets/contact.css
+++ b/src/assets/stylesheets/contact.css
@@ -24,9 +24,30 @@
   width: 40%;
 }
 
+.contact ul li:nth-child(3) a {
+  font-weight: bold !important;
+}
+
 .contact ul a {
-  font-size: 2em;
+  font-style: "Muli" !important;
+  font-size: 20px;
   text-decoration: none;
-  color: black;
+  color: #d99827;
+  font-weight: bold !important;
+  cursor: pointer !important;
+}
+
+@media only screen and (min-device-width: 1024px) {
+  .contact {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -webkit-box-align: end !important;
+        -ms-flex-align: end !important;
+            align-items: flex-end !important;
+    -webkit-box-ordinal-group: 2 !important;
+        -ms-flex-order: 1 !important;
+            order: 1 !important;
+  }
 }
 /*# sourceMappingURL=contact.css.map */
